Bug 436650 - [wayland] VNC connections do not work
Summary: [wayland] VNC connections do not work
Status: RESOLVED FIXED
Alias: None
Product: krdc
Classification: Applications
Component: VNC (other bugs)
Version First Reported In: 20.12.2
Platform: Fedora RPMs Linux
: NOR grave
Target Milestone: ---
Assignee: Urs Wolfer
URL:
Keywords: wayland-only
: 434908 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-05 18:03 UTC by emelenas
Modified: 2022-07-29 11:31 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description emelenas 2021-05-05 18:03:28 UTC
SUMMARY

I am not able to use VNC connections

STEPS TO REPRODUCE
1. Open a VNC connection
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT

1.- Only part of the screen is shown; windows appear only partially
2.- Typed text does not show on screen, e.g. on a Konsole (although apparently it gets transferred to the remote computer, e.g. for the password in the greet screen)
3.- Context menu, startup menu do not appear
4.- Extremely slow performance

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Fedora 34
(available in About System)
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.80.0
Qt Version: 5.15.2

ADDITIONAL INFORMATION

The VNC connection is unusable, no application can be seen completely, windows are not repainted or only partially.
Comment 1 Albert Astals Cid 2021-05-05 19:21:17 UTC
you're on fedora so i guess you're on wayland?
Comment 2 emelenas 2021-05-05 20:22:43 UTC
(In reply to Albert Astals Cid from comment #1)
> you're on fedora so i guess you're on wayland?

That is correct, first time ever and all sorts of problems
Comment 3 Patrick Silva 2021-05-31 11:40:35 UTC
*** Bug 434908 has been marked as a duplicate of this bug. ***
Comment 4 Aleix Pol 2021-06-11 22:31:30 UTC
You can try running it under xwayland with QT_QPA_PLATFORM=xcb and then see if it's a wayland-specific issue.
Comment 5 emelenas 2021-06-13 09:52:28 UTC
Would you perhaps explain where that setting is to be inserted? My configuration files? KDE's? Plasma's?

Many thanks.
Comment 6 Jürgen Richtsfeld 2021-06-13 11:40:57 UTC
(In reply to Aleix Pol from comment #4)
> You can try running it under xwayland with QT_QPA_PLATFORM=xcb and then see
> if it's a wayland-specific issue.

I can confirm when launching krdc with QT_QPA_PLATFORM=xcb the problem *does not* occur.
Comment 7 David Marzal 2021-06-16 13:17:45 UTC
Linux/KDE Plasma: ArchLinux
KDE Plasma Version: 5.22.1
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2

Launching krdc with QT_QPA_PLATFORM=xcb the problem *does NOT* occur.

In case is useful, Remmina doesn't have this problem and works well under wayland
Comment 8 azrdev 2022-07-21 20:20:55 UTC
I also have very bad lag and only partial screen updates with vnc when on wayland. QT_QPA_PLATFORM=xcb fixes this.

krdc 22.04.3-1 on archlinux.
Comment 9 Bug Janitor Service 2022-07-25 19:32:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/krdc/-/merge_requests/38
Comment 10 Aleix Pol 2022-07-29 11:21:59 UTC
Git commit 0f2e5ad4864ac3e52ea5c7a5b54bbbb43b3dd6ad by Aleix Pol.
Committed on 29/07/2022 at 10:57.
Pushed by apol into branch 'master'.

MainWindow: Remove workarounds for QX11EmbedContainer

QX11EmbedContainer is not around anymore and this breaks on Wayland.

M  +0    -3    mainwindow.cpp

https://invent.kde.org/network/krdc/commit/0f2e5ad4864ac3e52ea5c7a5b54bbbb43b3dd6ad
Comment 11 Aleix Pol 2022-07-29 11:31:28 UTC
Git commit 17a78f278bbbca49cd5bf12badfacca2171a9387 by Aleix Pol.
Committed on 29/07/2022 at 11:31.
Pushed by apol into branch 'release/22.08'.

MainWindow: Remove workarounds for QX11EmbedContainer

QX11EmbedContainer is not around anymore and this breaks on Wayland.

M  +0    -3    mainwindow.cpp

https://invent.kde.org/network/krdc/commit/17a78f278bbbca49cd5bf12badfacca2171a9387