MainWindow: Remove workarounds for QX11EmbedContainer

QX11EmbedContainer is not around anymore and this breaks on Wayland.

BUG: 436650